# im-ucb

./: .gitignore  CMakeLists.txt  README.md
data/congress/: README.txt  congress.txt  congress_orig.txt  process.py
data/karate/: README.txt  karate.txt
experiment/: exp_median.sh  exp_small.sh  visualize.ipynb
include/: cbgreedy.hpp  confidence_bound.hpp  diffusion.hpp  graph.hpp  greedy.hpp  log.hpp  rng.hpp  ucb copy.hpp  ucb.hpp  utility.hpp
include/im/: all.hpp
include/stdfin/: README.md
src/: diffusion.cpp  graph.cpp  log.cpp  main.cpp
tests/: test_diffusion_deterministic.cpp  test_diffusion_minimal.cpp  test_graph.cpp  test_greedy.cpp  test_greedy_cb.cpp  test_lil_confidence.cpp  test_ucb.cpp
